--- a/Horse.cabal
+++ b/Horse.cabal
@@ -25,7 +25,8 @@ executable Horse
                        text >= 1.1 && < 1.2,
                        http-conduit >= 2.0 && < 2.1,
                        bytestring >=0.10 && < 0.11,
-                       exception >= 0.5 && < 0.6
+                       exceptions >= 0.5 && < 0.6,
+                       transformers >= 0.3 && < 0.4
   default-language:    Haskell2010
   Ghc-options:         -Wall
                        -fwarn-tabs
