--- a/Horse.cabal
+++ b/Horse.cabal
@@ -26,7 +26,9 @@ executable Horse
                        http-conduit >= 2.0 && < 2.1,
                        bytestring >=0.10 && < 0.11,
                        exceptions >= 0.5 && < 0.6,
-                       transformers >= 0.3 && < 0.4
+                       transformers >= 0.3 && < 0.4,
+                       markov-chain >= 0.0 && < 0.1,
+                       random >= 1.0 && < 1.1
   default-language:    Haskell2010
   Ghc-options:         -Wall
                        -fwarn-tabs
