--- a/Horse.cabal
+++ b/Horse.cabal
@@ -21,14 +21,16 @@ executable Horse
   other-extensions:    OverloadedStrings, RecordWildCards
   build-depends:       base >=4.7 && <4.8,
                        authenticate-oauth >=1.4 && < 1.5,
-                       configurator >= 0.2 && < 0.3,
-                       text >= 1.1 && < 1.2,
-                       http-conduit >= 2.0 && < 2.1,
                        bytestring >=0.10 && < 0.11,
+                       conduit >= 1.0 && < 1.1,
+                       configurator >= 0.2 && < 0.3,
                        exceptions >= 0.5 && < 0.6,
-                       transformers >= 0.3 && < 0.4,
+                       http-conduit >= 2.0 && < 2.1,
                        markov-chain >= 0.0 && < 0.1,
-                       random >= 1.0 && < 1.1
+                       random >= 1.0 && < 1.1,
+                       resourcet >= 0.4 && < 0.5,
+                       text >= 1.1 && < 1.2,
+                       transformers >= 0.3 && < 0.4
   default-language:    Haskell2010
   Ghc-options:         -Wall
                        -fwarn-tabs
